Remove some deprecated API usage, switch to newer JDK api usages, refactor.